tests/NormalTests/paczka1/small_fuzzy/45678911.err
Error in line 4: OIqb9v2N8xs S511 15,6
Error in line 1: b4dxm9Wop4 S439 40,3
